[project]
name = "langgraph-study"
version = "0.1.0"
description = ""
authors = [
    {name = "Rakshak1344",email = "dev.rakshith14@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
packages = [
    { include = "reactagent", from = "src" },
    { include = "reflection_agent", from = "src" },
]
dependencies = [
    "langgraph (>=0.3.25,<0.4.0)",
    "isort (>=6.0.1,<7.0.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "langchain-openai (>=0.3.12,<0.4.0)",
    "grandalf (>=0.8,<0.9)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "langgraph-checkpoint-sqlite (>=2.0.6,<3.0.0)",
    "msgpack (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
